fixed padding on mobile view

--- a/index.css
+++ b/index.css
@@ -187,6 +187,8 @@ div.half.col {
   }
   .section {
     width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
   }
   #projects .row, #education .row, #skills .row {
     display: flex;
